Fix "clear filter" icon alignment (ajaxlayerednavigation)

--- a/web/css/layout/_layered-navigation.less
+++ b/web/css/layout/_layered-navigation.less
@@ -101,8 +101,10 @@
                 }
                 &-title {
                     font-weight: 500;
-                    justify-content: space-between;
                     padding: @1 0;
+                    :first-child {
+                        .margin-right(auto);
+                    }
                     &::after {
                         opacity: .3;
                     }
